--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,131 @@
-attr==0.3.2
-ConfigParser==7.2.0
-cryptography==46.0.3
-docutils==0.22.4
-filelock==3.20.3
-HTMLParser==0.0.2
-ipython==9.9.0
-ipywidgets==8.1.8
-jnius==1.1.0
-keyring==25.6.0
-numpy==2.4.1
-opencv_python==4.12.0.88
-protobuf==6.33.4
-pyOpenSSL==25.3.0
-redis==7.1.0
-skimage==0.0
-Sphinx==9.1.0
-thread==2.0.6
-urllib3_secure_extra==0.1.0
-xmlrpclib==1.0.1
+absl-py==2.3.1
+anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1753980460404/work
+anaconda-auth @ file:///croot/anaconda-cloud-auth-split_1747863777058/work
+anaconda-cli-base @ file:///croot/anaconda-cli-base_1741369443553/work
+annotated-types @ file:///work/perseverance-python-buildout/croot/annotated-types_1728386958747/work
+anyio==4.11.0
+archspec @ file:///croot/archspec_1709217642129/work
+astunparse==1.6.3
+attrs==25.4.0
+boltons @ file:///croot/boltons_1751383775419/work
+brotlicffi @ file:///croot/brotlicffi_1736182461069/work
+certifi @ file:///croot/certifi_1754570635119/work/certifi
+cffi @ file:///croot/cffi_1736182485317/work
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click @ file:///croot/click_1754477934456/work
+cloudpickle==3.1.2
+colorama @ file:///work/perseverance-python-buildout/croot/colorama_1728388434940/work
+conda @ file:///croot/conda_1754469510968/work/conda-src
+conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1755883788794/work
+conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1755123313635/work
+conda-content-trust @ file:///work/perseverance-python-buildout/croot/conda-content-trust_1728487058234/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1745607008911/work/src
+conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
+conda_package_streaming @ file:///croot/conda-package-streaming_1751307506088/work
+contourpy==1.3.3
+cryptography @ file:///croot/cryptography_1753084572505/work
+cycler==0.12.1
+distro @ file:///work/perseverance-python-buildout/croot/distro_1728396110052/work
+docopt==0.6.2
+flatbuffers==25.9.23
+fonttools==4.61.1
+frozendict @ file:///work/perseverance-python-buildout/croot/frozendict_1728497542215/work
+gast==0.6.0
+google-pasta==0.2.0
+griffe==1.15.0
+grpcio==1.76.0
+gym==0.26.2
+gym-notices==0.1.0
+h11==0.16.0
+h5py==3.15.1
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
+ImageIO==2.37.2
+jaraco.classes @ file:///croot/jaraco.classes_1755516327832/work
+jaraco.context @ file:///io/perseverance-python-buildout/croot/jaraco.context_1731706750665/work
+jaraco.functools @ file:///croot/jaraco.functools_1740408111753/work
+jeepney @ file:///tmp/build/80754af9/jeepney_1627537048313/work
+jiter==0.12.0
+jsonpatch @ file:///work/perseverance-python-buildout/croot/jsonpatch_1728399595941/work
+jsonpointer @ file:///croot/jsonpointer_1753788433671/work
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+keras==3.12.0
+keyring @ file:///croot/keyring_1745484691218/work
+kiwisolver==1.4.9
+lazy_loader==0.4
+libclang==18.1.1
+libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
+Markdown==3.10
+markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1728387994477/work
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+mcp==1.22.0
+mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1728387286143/work
+menuinst @ file:///croot/menuinst_1753464582829/work
+ml_dtypes==0.5.4
+more-itertools @ file:///work/perseverance-python-buildout/croot/more-itertools_1728388668839/work
+namex==0.1.0
+networkx==3.6.1
+numpy==2.2.6
+openai==2.8.1
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.18.0
+packaging @ file:///croot/packaging_1753775359799/work
+pillow==12.0.0
+pipreqs==0.4.13
+pkce @ file:///work/perseverance-python-buildout/croot/pkce_1728388093137/work
+platformdirs @ file:///croot/platformdirs_1744273042065/work
+pluggy @ file:///croot/pluggy_1733169602837/work
+protobuf==6.33.1
+pycosat @ file:///croot/pycosat_1736868416091/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.12.4
+pydantic-settings @ file:///io/buildout/croot/pydantic-settings_1735843225507/work
+pydantic_core==2.41.5
+Pygments @ file:///croot/pygments_1744664109463/work
+PyJWT @ file:///io/buildout/croot/pyjwt_1739558969999/work
+pyparsing==3.2.5
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
+python-dateutil==2.9.0.post0
+python-dotenv @ file:///croot/python-dotenv_1745610241282/work
+python-multipart==0.0.20
+readchar @ file:///work/perseverance-python-buildout/croot/readchar_1728397613245/work
+referencing==0.37.0
+requests @ file:///croot/requests_1750426329888/work
+rich @ file:///croot/rich_1732638981168/work
+rpds-py==0.29.0
+ruamel.yaml @ file:///croot/ruamel.yaml_1745960305322/work
+ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1745937152469/work
+scikit-image==0.26.0
+scipy==1.17.0
+SecretStorage @ file:///work/perseverance-python-buildout/croot/secretstorage_1728387678881/work
+semver @ file:///croot/semver_1736540782504/work
+setuptools==78.1.1
+shellingham @ file:///work/perseverance-python-buildout/croot/shellingham_1728395303315/work
+six==1.17.0
+sniffio==1.3.1
+sse-starlette==3.0.3
+starlette==0.50.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+tifffile==2026.1.14
+tomli @ file:///croot/tomli_1753774587605/work
+tqdm @ file:///croot/tqdm_1738943501192/work
+truststore @ file:///croot/truststore_1753907171582/work
+typer @ file:///work/perseverance-python-buildout/croot/typer_1728397851651/work
+types-requests==2.32.4.20250913
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3 @ file:///croot/urllib3_1750775463400/work
+uvicorn==0.38.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
+yarg==0.1.10
+zstandard @ file:///croot/zstandard_1731356346222/work
